2014-03-18  Per Bothner  <per@bothner.com>

	* Path.java: Moved from gnu/text.
	* FilePath.java: Likewise.
	* URIPath.java: Likewise.
	* URLPath.java: Likewise.
	* URLPath.java (classResourcePath): Moved to GetModuleClass.java.

2014-03-17  Per Bothner  <per@bothner.com>

	* NBufferedInputStream.java (<init>): Failed to set barr field to
	supplied buffer.

2014-02-23  Per Bothner  <per@bothner.com>

	* BinaryInPort.java (class BinaryInputStream): Rename to
	NBufferedInputStream and moved to separate file.
	(fill): If charset not set, defer defaulting to UTF-8 as long
	as we only see ASCII.  This allows handing encoding declarations.
	(setFromByteOrderMark): New method.
	(openHeuristicFile): New static method.
	* NBufferedInputStream.java: New file.
	Add suppot for mark/reset.

2014-02-16  Per Bothner  <per@bothner.com>

	* WriterManager.java: Make sure Error is uncaught or re-thrown.

2014-02-08  Per Bothner  <per@bothner.com>

	* WriterManager.java (registerShutdownHook): Simplify - we now
	require Java 3 and thus Runtime.addShutdownHook.

2014-01-10  Per Bothner  <per@bothner.com>

	* InPort.java: Add synchronization based on lock field.
	* BinaryInPort.java: Fix some small bugs.

2014-01-09  Per Bothner  <per@bothner.com>

	* BinaryInPort.java (<init>): Don't force using a fixed buffer.
	Instead setKeepFullLines(false).

	* LineInputStreamReader.java: Merge into BinaryInPort.java, and remove.

2014-01-08  Per Bothner  <per@bothner.com>

	* LineBufferedReader.java: Merge into InPort.java, and remove.

2014-01-06  Per Bothner  <per@bothner.com>

	* BinaryInPort.java: Moved from gnu.mapping.
	* BinaryOutPort.java: Likewise.
	* CharArrayInPort.java: Likewise.
	* CharArrayOutPort.java: Likewise.
	* InPort.java: Likewise.
	* OutPort.java: Likewise.
	* LogWriter.java: Likewise.
	* TtyInPort.java: Likewise.
	* LineBufferedReader.java: Moved from gnu.text.
	* LineInputStreamReader.java: Likewise.
	* NullReader.java: Likewise.
	* PrettyWriter.java: Likewise.