@@ -1,3 +1,8 @@
+2014-05-13  Per Bothner  <per@bothner.com>
+
+	* standard/require.java (lookupModuleFromSourcePath): Don't resolve
+	if the base filename is the default InPort.
+
 2014-05-12  Per Bothner  <per@bothner.com>
 
 	* standard/Scheme.java (createReadTable): Bind '@' to handling splice,
